tests/ui/transmute/transmute-associated-types-different-sizes.stderr
error[E0512]: cannot transmute between types of different sizes, or dependently-sized types
  --> $DIR/transmute-associated-types-different-sizes.rs:13:14
   |
LL |     unsafe { std::mem::transmute(a) }
   |              ^^^^^^^^^^^^^^^^^^^
   |
   = note: source type: `&ArrayPeano<T>` (N bits)
   = note: target type: `&[T]` (N bits)

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0512`.
